--- a/main.ipynb
+++ b/main.ipynb
@@ -287,16 +287,16 @@
     "\n",
     "# Set up the teacher and student models all models are instatiated from the same base model\n",
     "mu_real = load_edm(model_path=BASE_MODEL, device=DEVICE)\n",
-    "mu_fake = load_edm(model_path=BASE_MODEL, device=DEVICE)\n",
-    "generator = load_edm(model_path=BASE_MODEL, device=DEVICE)\n",
+    "mu_fake = '...'\n",
+    "generator = '...'\n",
     "\n",
     "# Create losses, Generator Loss is the combined loss of DMD and the regression loss (LPIPS)\n",
     "generator_loss = GeneratorLoss(timesteps=DMD_LOSS_TIMESTEP, lambda_reg=DMD_LAMBDA_REG)\n",
     "diffusion_loss = DenoisingLoss()\n",
     "\n",
     "# Create optimizers\n",
-    "generator_optimizer = AdamW(params=generator.parameters(), lr=LR, weight_decay=WEIGHT_DECAY, betas=BETAS)\n",
-    "diffuser_optimizer = AdamW(params=mu_fake.parameters(), lr=LR, weight_decay=WEIGHT_DECAY, betas=BETAS)\n",
+    "generator_optimizer = AdamW(params='...', lr=LR, weight_decay=WEIGHT_DECAY, betas=BETAS)\n",
+    "diffuser_optimizer = AdamW(params='...', lr=LR, weight_decay=WEIGHT_DECAY, betas=BETAS)\n",
     "\n",
     "# Create ckp handler\n",
     "checkpoint_handler = CheckpointHandler(\n",
